--- a/src/Hypercube.Mathematics/Hypercube.Mathematics.csproj
+++ b/src/Hypercube.Mathematics/Hypercube.Mathematics.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
         <Version>1.0.1</Version>
         <Authors>TornadoTech</Authors>
