--- a/src/Hypercube.Mathematics/Hypercube.Mathematics.csproj
+++ b/src/Hypercube.Mathematics/Hypercube.Mathematics.csproj
@@ -6,14 +6,19 @@
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+
+        <PackageIcon>../../assets/logo.png</PackageIcon>
+        
         <Version>1.0.1</Version>
         <Authors>TornadoTech</Authors>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <RepositoryUrl>https://github.com/technologists-team/hypercube-mathematics</RepositoryUrl>
     </PropertyGroup>
 
+    
     <ItemGroup>
-        <None Include="..\LICENSE" Pack="true" PackagePath="" Visible="false"/>
+        <None Include="../../LICENSE" Pack="true" PackagePath="" Visible="false"/>
+        <None Include="../../assets/logo.png" Pack="true" PackagePath="assets/" />
     </ItemGroup>
     
     <ItemGroup>
