fix: tests csproj

--- a/src/Hypercube.Tests/Hypercube.Tests.csproj
+++ b/src/Hypercube.Tests/Hypercube.Tests.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\Hypercube.Mathematics\Hypercube.Mathematics.csproj" />
+      <ProjectReference Include="..\Hypercube.Mathematics\Hypercube.Mathematics.csproj" />
     </ItemGroup>
 
 </Project>
