--- a/src/Hypercube.Mathematics/Hypercube.Mathematics.csproj
+++ b/src/Hypercube.Mathematics/Hypercube.Mathematics.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 
+        <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>assets/logo.png</PackageIcon>
         
         <Version>1.0.5</Version>
@@ -15,8 +16,8 @@
         <RepositoryUrl>https://github.com/technologists-team/hypercube-mathematics</RepositoryUrl>
     </PropertyGroup>
 
-    
     <ItemGroup>
+        <None Include="../../PACKAGE.md" Pack="true" PackagePath="README.md" Visible="false"/>
         <None Include="../../LICENSE" Pack="true" PackagePath="" Visible="false"/>
         <None Include="../../assets/logo.png" Pack="true" PackagePath="assets/" Visible="false" />
     </ItemGroup>
