fix: unit-tests.yml

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -38,5 +38,5 @@ jobs:
       run: dotnet tool restore
 
     - name: 🛠️ Build and Test (Debug)
-      run: dotnet test --configuration=Debug Hypercube.UnitTests/Hypercube.UnitTests.csproj
+      run: dotnet test --configuration=Debug Hypercube.Mathematics.UnitTests/Hypercube.Mathematics.UnitTests.csproj
       working-directory: src
